--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -43,7 +43,7 @@ header .container .item a:hover{
 #home{
     width: 100%;
     height: 96vh;
-    background: linear-gradient(to left, rgba(30, 8, 112, 0.951), rgba(0,0,0,0.6)), url(/Resources/Images/photo_banner.jpg);
+    background: linear-gradient(to left, rgba(30, 8, 112, 0.951), rgba(0,0,0,0.6)), url("Resources/Images/photo_banner.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
